-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 2.4.0
-
None
-
Gentoo Linux
gcc 4.6.1
-
00ce839d0366eaac9a2c28e6bff2a407e47cbdb1
In the Build and Run options, enable "Save all files before build", "Always build project before deploying it", and "Always deploy project before running it".
Steps to reproduce:
1. Make a change to a read-only file.
2. Press Ctrl + B to build, or Ctrl + R to run the project.
3. You are prompted for how to save the file, press Cancel.
PROBLEM: The project is still built and ran.
This feature was added in (I think) 2.2, but no longer works in 2.4.
For Gerrit Dashboard: QTCREATORBUG-6440 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
7998,3 | If user cancels save file prompt, cancel entire action. | 2.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |