If user cancels save file prompt, cancel entire action.

Task-Number: QTCREATORBUG-6440
Change-Id: I8807de53b1a05a0abd57c140dab5ba8df441efd5
Reviewed-by: Daniel Teske <daniel.teske@nokia.com>
Reviewed-by: Eike Ziller <eike.ziller@nokia.com>