src/plugins/coreplugin/filemanager.cpp
@@ -527,11 +527,12 @@ void FileManager::updateExpectedState(const QString &fileName)
 /*!
     \fn QList<IFile*> FileManager::saveModifiedFilesSilently(const QList<IFile*> &files)
 
-    Tries to save the files listed in \a files . Returns the files that could not be saved.
+    Tries to save the files listed in \a files. The \a cancelled argument is set to true
+    if the user cancelled the dialog. Returns the files that could not be saved.
 */
-QList<IFile *> FileManager::saveModifiedFilesSilently(const QList<IFile *> &files)
+QList<IFile *> FileManager::saveModifiedFilesSilently(const QList<IFile *> &files, bool *cancelled)
 {
-    return saveModifiedFiles(files, 0, true, QString());
+    return saveModifiedFiles(files, cancelled, true, QString());
 }
 
 /*!
